--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,13 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display:flex;
+  justify-content: space-between;
+  padding: 8px;
+}
+.header-left,
+.header-right{
+  display:flex;
 }
 
 .profile-image {
@@ -20,6 +27,8 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  align-self: center;
+  margin-left: 16px;
 }
 
 .logo {
@@ -41,8 +50,12 @@ a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  
 }
 
 ul {
   list-style-type: none;
+  display: flex;
+  padding-left: 16px;
+  gap:16px;
 }
