--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,28 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+.cards {
+  display: flex;
+  gap: 52px;
+  text-align: center;
+  justify-content: center;
+}
+  
+
+.card {
+  width: 200px;
+}
+
+.card img {
+  text-align: center;
+}
+
+.text {
+  text-align: center;
 }
 
 /* do not edit this footer */
